WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275090
REGRESSION (
271254@main
): Partial box-shadow left behind when resizing elements
https://bugs.webkit.org/show_bug.cgi?id=275090
Summary
REGRESSION (271254@main): Partial box-shadow left behind when resizing elements
Simon Fraser (smfr)
Reported
2024-06-03 20:43:08 PDT
271254@main
caused a bug when an element with box-shadow or outlines was resized, sometimes.
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2024-06-03 20:43:22 PDT
<
rdar://121966069
>
Simon Fraser (smfr)
Comment 2
2024-06-03 20:45:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29485
EWS
Comment 3
2024-06-04 14:55:28 PDT
Committed
279717@main
(939b1069b0b6): <
https://commits.webkit.org/279717@main
> Reviewed commits have been landed. Closing PR #29485 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug