Cherry-pick 279717@main (939b1069b0b6). https://bugs.webkit.org/show_bug.cgi?id=275090

REGRESSION (271254@main): Partial box-shadow left behind when resizing elements
    https://bugs.webkit.org/show_bug.cgi?id=275090
    rdar://121966069

    Reviewed by Alan Baradlay.

    In 271254@main, RenderBox::localOutlineBoundsRepaintRect() failed to actually return the
    modified rect, resulting in under-repainting when an element with box-shadow or outlines
    changed size.

    * LayoutTests/fast/box-shadow/negative-shadow-box-expand-expected.txt:
    * LayoutTests/fast/box-shadow/negative-shadow-box-shrink-expected.txt:
    * LayoutTests/fast/repaint/4776765-expected.txt: Renamed from LayoutTests/platform/mac/fast/repaint/4776765-expected.txt.
    * LayoutTests/fast/repaint/outline-bounds-repaint-expected.txt: Added.
    * LayoutTests/fast/repaint/outline-bounds-repaint.html: Added.
    * LayoutTests/platform/gtk/fast/repaint/4776765-expected.txt:
    * LayoutTests/platform/mac-ventura-wk2/fast/repaint/4776765-expected.txt:
    * LayoutTests/platform/mac-wk1/fast/repaint/4776765-expected.txt:
    * Source/WebCore/rendering/RenderBox.cpp:
    (WebCore::RenderBox::localOutlineBoundsRepaintRect const):

    Canonical link: https://commits.webkit.org/279717@main

Canonical link: https://commits.webkit.org/274313.396@webkitglib/2.44